# caffe-fpga-opencl

./: .gitignore  CMakeLists.txt  README.md  env.sh
cmake/: FindOpenCL.cmake
convertor/data/mnist/: model.caffemodel  solver.prototxt  train.prototxt
convertor/data/mnist/mnist_test_lmdb/: lock.mdb
convertor/data/mnist/mnist_train_lmdb/: lock.mdb
convertor/output/: mnist-config.json
convertor/spec/: network-config.json  network.json
convertor/src/: apply-config.py  applyConfig.py  convert.py  layer.py  layer_type.py  ls-net.py  net.py  util.py
cpp/: custom.cpp  custom.h  fpganet.h  helper.cpp  helper.h  main.cpp  net_enum.h  network.cpp  network.h
cpp/RunOpenCL/convolutionLayer/: convolutionLayer.cpp  mnist_data.h
cpp/RunOpenCL/net/: mnist_data.h  net.cpp  net.h  net.tcl
cpp/RunOpenCL/pipelineDemo/: pipelineDemo.cpp  pipelineDemo.tcl
cpp/RunOpenCL/vecAdd/: Makefile  vecAdd.cpp  vecAdd.h
cpp/json/: json.h
cpp/other/: mnist_data.h
doc/: Contribution_Guide.md  Notice.md  Optimization.md  Usage.md  code_structure_explain.md  cpp.md  how_to_add_new_layer.md  how_to_support_multiple_branches_network.md  net.cl.md  optimization.md  requirements_install.md  step_by_step.md
kernels/convolutionLayer/: convolutionLayer.cl
kernels/net/: net.cl  net.cl.sw_emu.xclbin  net.h
kernels/pipelineDemo/: pipelineDemo.cl  pipelineDemo.ll
kernels/vecAdd/: vecAdd.cl
